change ad page from controller to imageview

--- a/GongYunTong/Base.lproj/Main.storyboard
+++ b/GongYunTong/Base.lproj/Main.storyboard
@@ -1,8 +1,11 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="rKo-nN-kVE">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="rKo-nN-kVE">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -25,36 +28,6 @@
             </objects>
             <point key="canvasLocation" x="356" y="40"/>
         </scene>
-        <!--Start Controller-->
-        <scene sceneID="1S5-s1-tSM">
-            <objects>
-                <viewController storyboardIdentifier="VHSStartController" id="l2j-KH-HgX" customClass="VHSStartController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Ub8-bz-ydo"/>
-                        <viewControllerLayoutGuide type="bottom" id="gyJ-d6-ZYT"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="RX0-K8-Tlx">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="o3J-Kq-c9X"/>
-                        </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="gyJ-d6-ZYT" firstAttribute="top" secondItem="o3J-Kq-c9X" secondAttribute="bottom" id="2au-Q8-Mhd"/>
-                            <constraint firstAttribute="trailing" secondItem="o3J-Kq-c9X" secondAttribute="trailing" id="BJU-dU-iIR"/>
-                            <constraint firstItem="o3J-Kq-c9X" firstAttribute="top" secondItem="Ub8-bz-ydo" secondAttribute="bottom" id="Um7-hV-vhO"/>
-                            <constraint firstItem="o3J-Kq-c9X" firstAttribute="leading" secondItem="RX0-K8-Tlx" secondAttribute="leading" id="uMj-8d-P3V"/>
-                        </constraints>
-                    </view>
-                    <connections>
-                        <outlet property="startImageView" destination="o3J-Kq-c9X" id="MkO-FI-0Up"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="XFA-o2-mkm" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="857" y="40"/>
-        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="c0l-Cl-nAE">
             <objects>
@@ -67,7 +40,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QxG-hN-wbA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1398" y="40"/>
+            <point key="canvasLocation" x="791" y="40"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="N7d-On-6WX">
